--- a/index.html
+++ b/index.html
@@ -9,44 +9,70 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-      <div class="atropos">
+      <div class="atropos first">
         <div class="atropos-scale">
           <div class="atropos-rotate">
             <div class="atropos-inner atroposinner">
-              <div class="card" style="width: 18rem;">
-               <div class="images">
-                <img class="atropos-spacer" src="https://atroposjs.com/images/header/atropos-bg.svg" alt="stars">
-                <img data-atropos-offset="-4.5" src="https://atroposjs.com/images/header/atropos-bg.svg" alt="stars">
-                <img data-atropos-offset="-2.5" src="https://atroposjs.com/images/header/atropos-mountains.svg" alt="mountains">
-                <img data-atropos-offset="10" src="https://atroposjs.com/images/header/atropos-forest-back.svg" alt="forest">
-                <img data-atropos-offset="8" src="https://atroposjs.com/images/header/atropos-forest-mid.svg" alt="forest">
-                <img data-atropos-offset="0" src="https://atroposjs.com/images/header/atropos-forest-front.svg" alt="forest">
-                <img data-atropos-offset="5" src="https://atroposjs.com/images/header/atropos-logo-en.svg" alt="atropos logo">
-               </div>
+              <div class="card" style="width: 18rem;" >
+                <div class="images">
+                  <img src="images/filip-zrnzevic-QsWG0kjPQRY-unsplash.jpg" alt="" class="atropos-spacer">
+                  <div class="tig">
+                    <img src="images/tiger.png" alt=""class="tiger" data-atropos-offset="5">
+                  </div>
+                 
+                 </div>
                 <div class="card-body">
-                  <h5 class="card-title" data-atropos-offset="6">Forest</h5>
-                  <p class="card-text"  data-atropos-offset="5">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn"  data-atropos-offset="5">Go somewhere</a>
+                  <h5 class="card-title ms-3 mt-3 text-dark fw-bolder" data-atropos-offset="6">Forest</h5>
+                  <p class="card-text ms-3 mt-3"  data-atropos-offset="6">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn ms-3 mt-1"  data-atropos-offset="6">Go somewhere</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="atropos second">
+        <div class="atropos-scale">
+          <div class="atropos-rotate">
+            <div class="atropos-inner original">
+                <div class="images2">
+                  <img data-atropos-offset="0" src="https://atroposjs.com/images/header/atropos-bg.svg" alt="stars" class="stars">
+                  <img data-atropos-offset="-3" src="https://atroposjs.com/images/header/atropos-bg.svg" alt="stars">
+                  <img data-atropos-offset="-1" src="https://atroposjs.com/images/header/atropos-mountains.svg" alt="mountains">
+                  <img data-atropos-offset="5" src="https://atroposjs.com/images/header/atropos-forest-back.svg" alt="forest">
+                  <img data-atropos-offset="8" src="https://atroposjs.com/images/header/atropos-forest-mid.svg" alt="forest">
+                  <img data-atropos-offset="0" src="https://atroposjs.com/images/header/atropos-forest-front.svg" alt="forest">
+                  </div>
+               </div>
+            </div>
+          </div>
+        </div>
+      <div class="atropos third">
+        <div class="atropos-scale">
+          <div class="atropos-rotate">
+            <div class="atropos-inner">
+                <div class="images3">
+                  <img src="images/filip-zrnzevic-QsWG0kjPQRY-unsplash.jpg" alt="">
+                  <img data-atropos-offset="0" src="images/left hand.png" alt="lefthand" class="lefthand">
+                  <img data-atropos-offset="0" src="images/right hand.png" alt="righthand" class="righthand">
+                  </div>
+               </div>
+            </div>
+          </div>
+        </div>
+      <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="node_modules/atropos/atropos.min.js"></script>
 <script>
-  const myAtropos = Atropos();
+  const myAtropos1 = Atropos({
+    el: '.first',
+  });
+  const myAtropos2 = Atropos({
+    el: '.second',
+  });
+  const myAtropos3 = Atropos({
+    el: '.third',
+  });
 </script>
 </body>
 </html>
-<!-- <img class="atropos-spacer" src="https://atroposjs.com/images/header/atropos-bg.svg" alt="stars">
-<img data-atropos-offset="-4.5" src="https://atroposjs.com/images/header/atropos-bg.svg" alt="stars">
-<img data-atropos-offset="-2.5" src="https://atroposjs.com/images/header/atropos-mountains.svg" alt="mountains">
-<img data-atropos-offset="10" src="https://atroposjs.com/images/header/atropos-forest-back.svg" alt="forest">
-<img data-atropos-offset="8" src="https://atroposjs.com/images/header/atropos-forest-mid.svg" alt="forest">
-<img data-atropos-offset="0" src="https://atroposjs.com/images/header/atropos-forest-front.svg" alt="forest">
-<img data-atropos-offset="5" src="https://atroposjs.com/images/header/atropos-logo-en.svg" alt="atropos logo">
-<div data-atropos-offset="6" class="atropos-button-wrap">
-  <a href="https://atroposjs.com/" target="_blank">Get Started</a>
-</div> -->
